# ICTree

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Common/lib/base64/: CMakeLists.txt
Common/lib/base64/base64/: base64.cpp  base64.h
Common/lib/boost/: CMakeLists.txt
Common/lib/catch2/: CMakeLists.txt
Common/lib/catch2/cmake/Catch2/: Catch2Config.cmake  Catch2ConfigVersion.cmake  Catch2Targets.cmake
Common/lib/cimg/: CMakeLists.txt
Common/lib/csvpp/: CMakeLists.txt
Common/lib/hdf5/: CMakeLists.txt
Common/lib/json/: CMakeLists.txt
Common/lib/nanoflann/: CMakeLists.txt
Common/lib/openfbx/: CMakeLists.txt
Common/lib/tiny_obj_loader/: CMakeLists.txt
Common/lib/tinyxml2/: CMakeLists.txt
Common/lib/tinyxml2/tinyxml2/: tinyxml2.cpp  tinyxml2.h
PerceptualMetric/: .gitignore  CMakeLists.txt  environment.yml  requirements.txt  setup.py
PerceptualMetric/cython/: CMakeLists.txt  setup.py
PerceptualMetric/cython/cmake/: FindCython.cmake  FindPythonExtensions.cmake  UseCython.cmake
PerceptualMetric/cython/src/: treeio.cxx  treeio.h  treeio.pyx
PerceptualMetric/lib/: .gitignore  CMakeLists.txt
PerceptualMetric/lib/treeio/: __init__.py
PerceptualMetric/psrc/: CMakeLists.txt  __init__.py
PerceptualMetric/psrc/growthwizard/: generator.py  growthwizard_main.py  parameter.py
PerceptualMetric/psrc/perceptree/: .gitignore  __init__.py  perceptree_cross_main.py  perceptree_main.py
PerceptualMetric/psrc/perceptree/common/: cache.py  configuration.py  file_saver.py  graph_saver.py  logger.py  logging.py  mailer.py  math.py  native.py  processing.py  profiler.py  pytorch_safe.py  serialization.py  tensorboard.py  util.py
PerceptualMetric/psrc/perceptree/data/: dataset.py  evaluate.py  exporter.py  feature_splitter.py  featurizer.py  generator.py  loader.py  predict.py  treeio.py
PerceptualMetric/psrc/perceptree/lib/res2net/: __init__.py  res2net_v1b.py
PerceptualMetric/psrc/perceptree/model/: base.py  combined_predictor.py  feature_predictor.py  image_predictor.py  util.py
PerceptualMetric/psrc/perceptree/test/common/: test_cache.py  test_configuration.py  test_util.py
PerceptualMetric/psrc/perceptree/test/data/: dummy_tree_file.py  dummy_tree_file.tree  dummy_tree_image.py  test_featurizer.py  test_loader.py  test_treeio.py
PerceptualMetric/psrc/treeindexer/: indexer.py  treeindexer_main.py
TreeIO/: .gitignore  CMakeLists.txt
TreeIO/include/TreeIO/: Augment.h  Render.h  Tree.h
TreeIO/shaders/: Graph40.frag.glsl  base_fs.glsl  base_vs.glsl  blur_fs.glsl  blur_vs.glsl  fullscreen_fs.glsl  fullscreen_vs.glsl  modality_common.glsl  old_recon_cs.glsl  old_recon_es.glsl  old_recon_fs.glsl  old_recon_gs.glsl  old_recon_vs.glsl  random_common.glsl  recon_common.glsl  recon_cs.glsl  recon_es.glsl  recon_fs.glsl  recon_gs.glsl  recon_vs.glsl  screen_fs.glsl  screen_vs.glsl  selection_comp.glsl  selection_lasso_comp.glsl  shadow_common.glsl
TreeIO/src/: CMakeLists.txt
TreeIO/src/TreeIO/impl/: TreeAugmentation.cpp  TreeAugmentation.h  TreeBuffer.cpp  TreeBuffer.h  TreeCamera.cpp  TreeCamera.h  TreeFrameBuffer.cpp  TreeFrameBuffer.h  TreeGLUtils.cpp  TreeGLUtils.h  TreeHistory.h  TreeMath.h  TreeOperations.cpp  TreeOperations.h  TreeRandomEngine.cpp  TreeRandomEngine.h  TreeReconstruction.cpp  TreeReconstruction.h  TreeRenderHelper.cpp  TreeRenderHelper.h  TreeRenderSystem.cpp  TreeRenderSystem.h  TreeRenderSystemPhoto.cpp  TreeRenderSystemPhoto.h  TreeRenderSystemRT.cpp  TreeRenderSystemRT.h  TreeRenderer.cpp  TreeRenderer.h  TreeRendererModality.cpp  TreeRendererModality.h  TreeRuntimeMetaData.cpp  TreeRuntimeMetaData.h  TreeScene.cpp  TreeScene.h  TreeSceneInstanceNames.h  TreeShader.cpp  TreeShader.h  TreeShaderCompatBlob.h.tmp  TreeShaderCompatBlur.cpp  TreeShaderCompatBlur.h  (+15 more)
TreeIOAcceleration/: CMakeLists.txt
TreeIOAcceleration/include/TreeIO/: TreeIOAcceleration.h
TreeIOAcceleration/src/: CMakeLists.txt
TreeIOAcceleration/src/TreeIO/impl/: TreeIOAcceleration.cpp  TreeIOAcceleration.h  TreeIOAccelerationUtils.cpp  TreeIOAccelerationUtils.h  TreeIOPointCloud.cpp  TreeIOPointCloud.h  TreeIOPolygonalModel.cpp  TreeIOPolygonalModel.h
TreeIOAcceleration/test/: CMakeLists.txt  catch_main.h  test_sanity.cpp
TreeIOLib/: CMakeLists.txt
TreeIOLib/include/TreeIO/: TreeIO.h
TreeIOLib/src/: CMakeLists.txt
TreeIOLib/src/TreeIO/impl/: TreeIOChains.cpp  TreeIOChains.h  TreeIOFbxImporter.cpp  TreeIOFbxImporter.h  TreeIOImageExporter.cpp  TreeIOImageExporter.h  TreeIOImageImporter.cpp  TreeIOImageImporter.h  TreeIOModelImporter.cpp  TreeIOModelImporter.h  TreeIOObjImporter.cpp  TreeIOObjImporter.h  TreeIOVectorT.h
TreeIOLib/test/: catch_main.cpp
cmake/: CMakeLists.txt
script/: build_modules.py
